--- a/WuxiaworldToPDF/CoverTemplate.html
+++ b/WuxiaworldToPDF/CoverTemplate.html
@@ -2,10 +2,10 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 </head>
 <body>
-    <p style="text-align: center; font-size: 30px; background: white; color: black">{TITLE}</p>
-    <img src="{IMAGE}" style="width: 100%" />
+<p style="background: white; color: black; font-size: 30px; text-align: center;">{TITLE}</p>
+<img src="{IMAGE}" style="width: 100%"/>
 </body>
 </html>
